--- a/package.json
+++ b/package.json
@@ -60,24 +60,10 @@
       ]
     }
   },
-  "sandbox": {
-    "user": {
-      "create": {
-        "fist_name": "demo",
-        "last_name": "user",
-        "email": "demouser@lastroom.mx",
-        "password": "password"
-      },
-      "read": {
-        "email": "julian@lastroom.mx",
-        "password": "123456"
-      }
-    }
-  },
-  "name": "nettest",
-  "description": "Write a little bit about this project",
+  "name": "apiconsole",
+  "description": "API Console built with wonka.js",
   "version": "0.0.1",
   "author": "",
   "homepage": "",
-  "_id": "nettest@0.0.1"
+  "_id": "apiconsole@0.0.1"
 }
